--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<ul>
 			<li><a href="#Sobre">Sobre Mim</a></li>
 			<li><a href="#Especialidades">Especialidades</a></li>
-			<li><a href="">Trabalhos e Hobbyes</a></li>
+			<li><a href="#Trabalhos">Trabalhos e Hobbyes</a></li>
 			<li><a href="">Entre em Contato</a></li>
 			
 	</ul>
@@ -88,8 +88,57 @@
 				<img src="img/verde doc.jpeg">
 				<p>Sempre respeito uma pessoa independente do que aconteceu e costusmo manter a calma. Tenho um grande senso de empatia com o próximo, antigamente eu não tinha e isso acabou me prejudicando muito</p>
 			</div>
+			<h2 id="Trabalhos">Alguns dos meus trabalhos- Sites </h2>
+			<div class="comp trab">
+				<a href="#"><img src="img/morty.jpg"></a>
+				<p></p>
+			</div>
+			<div class="comp trab">
+				<a href="#"><img src="img/rick.png"></a>
+				<p></p>
+			</div>
+			<div class="comp trab">
+				<a href="#"><img src="img/os dois.jpg"></a>
+				<p></p>
+			</div>
 			
 		</section>
+		<section id="hobby">
+			<h2>Coisas que gosto de fazer</h2>
+			<div class="hobby">
+				<p>Estudante aprendendo a fazer sites</p>
+				<iframe width="80%" height="300" src="https://www.youtube.com/embed/RSJbYWPEaxw?list=RDRSJbYWPEaxw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+			<div class="hobby">
+				<h3>Faço triatlo e peguei podio na categoria Sport, fui o 4 melhor atleta do ano</h3>
+				<iframe width="80%" height="300" src="https://www.youtube.com/embed/a-gHFv2b2yg?list=PL9tY0BWXOZFtTq-pR8kxWjPguXAQUWJj2" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+			<div class="hobby">
+				<p>Cheguei há 36 km por hora numa esteira como treino</p>
+				<iframe width="80%" height="300" src="https://www.youtube.com/embed/Gu2pVPWGYMQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+			<div class="hobby">
+				<p>Quase perdi os rins na ultima prova de atletismo mas eu não desisti e continuei para termina la</p>
+				<iframe width="80%" height="300" src="https://www.youtube.com/embed/Oextk-If8HQ?list=RDRSJbYWPEaxw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+			
+			
+		</section>
+		<section id="Contato">
+			<h2>Para me contratar</h2>
+			<p>Estes são os meus contatos</p>
+			<div>
+				<img src="img/tel.png">
+				<p><a href="tel:xx555555555">(11)99557-4213</a></p>
+			</div>
+			<div>
+				<img src="img/git.png">
+				<p><a href="https://github.com/Vitorcruz0428">GitHub</a></p>
+			</div>
+		</section>
+		<footer>
+			<p>Desenvolvido por Vitor Cruz</p>
+		</footer>
 
 		
 	</div>
